--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -10,10 +10,8 @@
                 <div style="float: right;padding: 1em">
                     <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab american-flag"
                             data-upgraded=",MaterialButton">
-                        {{#ifEq locale "en"}}
-                            <a href="/"><img class="cesar-menu__lang" src="images/lang/fr.svg"/></a>{{/ifEq}}
-                        {{#ifEq locale "fr"}}
-                            <a href="/en/"><img class="cesar-menu__lang" src="images/lang/us.svg"/></a>{{/ifEq}}
+                        {{#en}}<a href="/"><img class="cesar-menu__lang" src="images/lang/fr.svg"/></a>{{/en}}
+                        {{#fr}}<a href="/en/"><img class="cesar-menu__lang" src="images/lang/us.svg"/></a>{{/fr}}
                     </button>
                 </div>
             </div>
@@ -22,10 +20,10 @@
                     <h1 class="cesar-imagebanner-blink">
                         <span class="cesar-imagebanner-blink__head">Mix-IT</span><br>
                         <span class="cesar-imagebanner-blink__content"
-                              id="headbandComeback">{{message "home.headband.comeback"}}</span>
+                              id="headbandComeback">{{#i18n}}home.headband.comeback{{/i18n}}</span>
                     </h1>
                     <div class="cesar-text" style="vertical-align: center">
-                        <img src="images/icon/calendar.svg">&nbsp;{{message "home.headband.date"}}
+                        <img src="images/icon/calendar.svg">&nbsp;{{#i18n}}home.headband.date{{/i18n}}
                         <img src="images/icon/map-marker.svg">&nbsp;<a ui-sref="venir" href="/venir">CPE,
                         Lyon</a>
                     </div>
@@ -40,28 +38,26 @@
         <div class="cesar-container">
             <div class="mdl-grid cesar-section--bottom">
                 <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone mdl-cell--12-col-tablet cesar-info__content">
-                    <h2>{{message "home.sponsor.title"}}</h2>
+                    <h2>{{#18n}}home.sponsor.title{{/18n}}</h2>
                     <p class="cesar-text">
-                        <span>{{message "home.sponsor.presse"}}</span>&nbsp;
-                        <a target="sponsor" href="/docs/presse/leaflet/fr"><span>{{message
-                                "home.sponsor.presseend"}}</span></a>
+                        <span>{{#18n}}home.sponsor.presse{{/18n}}</span>&nbsp;
+                        <a target="sponsor" href="/docs/presse/leaflet/fr">
+                            <span>{{#i18n}}home.sponsor.presseend{{/i18n}}</span></a>
                     </p>
                     <p class="cesar-text">
-                        <span>{{message "home.sponsor.annonce"}}</span>&nbsp;
+                        <span>{{#18n}}home.sponsor.annonce{{/18n}}</span>&nbsp;
+                        <a target="sponsor" href="/docs/sponsor/leaflet/fr">
+                        <span>{{#i18n}}home.sponsor.annonceend{{/i18n}}</span></a>
+                        <span>{{#18n}}home.sponsor.return{{/18n}}</span>&nbsp;
                         <a target="sponsor"
-                           href="/docs/sponsor/leaflet/fr"><span>{{message
-                                "home.sponsor.annonceend"}}</span></a>
-
-                        <span>{{message "home.sponsor.return"}}</span>&nbsp;
-                        <a target="sponsor"
-                           href="/docs/sponsor/form/fr"><span>{{message "home.sponsor.form"}}</span></a>
-                        <span>{{message "home.sponsor.at"}}</span> <a>contact@mix-it.fr</a></p>
+                           href="/docs/sponsor/form/fr"><span>{{#18n}}home.sponsor.form{{/18n}}</span></a>
+                        <span>{{#18n}}home.sponsor.at{{/18n}}</span> <a>contact@mix-it.fr</a></p>
                     <p>&nbsp;</p>
                 </div>
                 <div class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone mdl-cell--12-col-tablet cesar-info__content">
-                    <h2>{{message "home.info.section1"}}</h2>
-                    <p class="cesar-text">{{message "home.info.section1content"}}</p>
-                    <p><span>{{message "home.info.oldconf"}}</span>&nbsp;
+                    <h2>{{#18n}}home.info.section1{{/18n}}</h2>
+                    <p class="cesar-text">{{#18n}}home.info.section1content{{/18n}}</p>
+                    <p><span>{{#18n}}home.info.oldconf{{/18n}}</span>&nbsp;
                         <a href="/mixit16">2016</a>,&nbsp;
                         <a href="/mixit15">2015</a>,&nbsp;
                         <a href="/mixit14">2014</a>,&nbsp;
@@ -69,8 +65,8 @@
                         <a href="/mixit12">2012</a></p>
                 </div>
                 <div class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone mdl-cell--12-col-tablet cesar-info__content">
-                    <h2>{{message "home.info.section2"}}</h2>
-                    <p class="cesar-text">{{message "home.info.section2content"}}</p>
+                    <h2>{{#18n}}home.info.section2{{/18n}}</h2>
+                    <p class="cesar-text">{{#18n}}home.info.section2content{{/18n}}</p>
                 </div>
             </div>
         </div>
@@ -85,11 +81,11 @@
                     <h1 class="cesar-imagebanner-blink">
                         <span class="cesar-imagebanner-blink__head">Speakers</span><br>
                         <span class="cesar-imagebanner-blink__content"></span>
-                        <span>{{message "home.speaker.top"}}</span>&nbsp;
+                        <span>{{#18n}}home.speaker.top{{/18n}}</span>&nbsp;
                         <a class="link" href="/article/163">Joel Spolsky</a>
                     </h1>
                     <p class="center cesar-text">
-                        <span>{{message "home.speaker.title"}}</span>
+                        <span>{{#18n}}home.speaker.title{{/18n}}</span>
                     </p>
                     <div style="display: flex">
                         <ul>
@@ -125,7 +121,7 @@
                             <li>...</li>
                         </ul>
                     </div>
-                    <p class="center cesar-text">{{message "home.speaker.cfp"}}</p>
+                    <p class="center cesar-text">{{#18n}}home.speaker.cfp{{/18n}}</p>
                 </div>
             </div>
         </div>
@@ -137,14 +133,14 @@
         <div class="cesar-container">
             <div class="mdl-grid">
                 <div class="mdl-cell mdl-cell--8-col mdl-cell--12-col-phone">
-                    <h3>{{message "footer.whoarewe.title"}}</h3>
+                    <h3>{{#18n}}footer.whoarewe.title{{/18n}}</h3>
 
-                    <p><span>{{message "footer.whoarewe.content"}}</span>&nbsp;(<a href="/staff">
-                        {{message "footer.whoarewe.more"}}</a>)</p>
+                    <p><span>{{#18n}}footer.whoarewe.content{{/18n}}</span>&nbsp;(<a href="/staff">
+                        {{#18n}}footer.whoarewe.more{{/18n}}</a>)</p>
 
                 </div>
                 <div class="mdl-cell mdl-cell--4-col mdl-cell--12-col-phone">
-                    <h3>{{message "footer.contactus"}}</h3>
+                    <h3>{{#18n}}footer.contactus{{/18n}}</h3>
                     <ul class="cesar-footer--social">
                         <li>
                             <a href="https://twitter.com/mixit_lyon" target="social">
@@ -162,13 +158,13 @@
             <div class="cesar-container cesar-footer__copyright">
                 &nbsp;<a class="grey-text text-lighten-4" href="/api/article/rss/" rel="alternate" title="RSS"
                          type="application/rss+xml">
-                <span>{{message "footer.rss"}}</span>
+                <span>{{#18n}}footer.rss{{/18n}}</span>
             </a>
 
                 &nbsp;&nbsp;
                 <a class="grey-text text-lighten-4" href="http://confcodeofconduct.com/index-fr.html"
                    target="_blank">
-                    <span>{{message "footer.codeofconduct"}}</span>
+                    <span>{{#18n}}footer.codeofconduct{{/18n}}</span>
                 </a>
 
                 <span class="right visible-on-desktop ng-binding">
