Update social networks links

--- a/src/main/resources/templates/footer.mustache
+++ b/src/main/resources/templates/footer.mustache
@@ -14,9 +14,9 @@
     </div>
     <div class="column">
       <ul class="menu simple mxt-menu--nav text-right">
-        <li><a href="https://www.facebook.com/MixITConf/" target="_blank" class="mxt-menu__item--nav">
+        <li><a href="https://www.facebook.com/mixitconf/" target="_blank" class="mxt-menu__item--nav">
             <img src="/images/svg/mxt-icon--social1.svg" class="mxt-icon--social" alt="Facebook"></a></li>
-        <li><a href="https://twitter.com/mixit_conf" target="_blank" class="mxt-menu__item--nav">
+        <li><a href="https://twitter.com/mixitconf" target="_blank" class="mxt-menu__item--nav">
             <img src="/images/svg/mxt-icon--social2.svg" class="mxt-icon--social" alt="Twitter"></a></li>
       </ul>
     </div>
